--- a/styles/filmes.css
+++ b/styles/filmes.css
@@ -1,5 +1,5 @@
 
-h3{
+h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
@@ -8,9 +8,9 @@ section{
     width: 80% ;
     height: auto;
     border: 2px solid rgb(23, 2, 44);
-    padding: 20px;
+    padding: 10px;
     /*background-color: rgb(162, 118, 245);*/
-    margin: 10px auto;
+    margin: 20px auto;
     border-radius: 20px;
     
 }
@@ -46,7 +46,7 @@ main{
 }
 
 .textoPostagem{
-    width: 65%;
+    width: 69%; /*reduz espaço entre imagem e post*/
     height: 100%;
     background-color: white;
     float: right ;
