--- a/styles/geral.css
+++ b/styles/geral.css
@@ -1,7 +1,21 @@
+@font-face {
+    font-family: Shardee;
+    src: url(../fonts/shardee/Shardee.ttf);
+}
+
+@font-face {
+    font-family: Nunito;
+    src: url(../fonts/Nunito/Nunito-VariableFont_wght.ttf);
+    font-weight: normal;
+}
+
+
+
 *{
     padding: 0%;
     margin: 0%;
 } /*Sempre aplicar em toda pagina*/
+
 
 
 header{
@@ -63,3 +77,32 @@ footer{
     background-color: rgb(104, 105, 105);
 
 }
+
+
+h1{
+    font-family: Shardee;
+    text-align: center;
+    color: rgb(115, 1, 126);
+    font-size: 100px;
+}
+
+h3{
+    font-family: Shardee;
+    text-align: center;
+    color: rgb(115, 1, 126);
+    font-size: 50px;
+}
+
+p{
+    font-family: Nunito;
+
+}
+
+h4{
+    font-family: Shardee;
+    text-align: center;
+    color:blue;
+    font-size: 50px;
+}
+
+    
