--- a/styles/manga.css
+++ b/styles/manga.css
@@ -1,14 +1,8 @@
+
 main{
     width: 100%;
     margin: 20px 0px;
 
-}
-
-
-h1{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-    color: rgb(115, 1, 126);
 }
 
 
@@ -42,7 +36,7 @@ h1{
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Nunito;
    
 
 }
